# crypto-signal

./: .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: arq.py  config.py  mongo.py  redis.py  tasks.py  worker.py
app/schemas/: strategy.py
app/static/: accounts.css  custom.min.css  custom.min.css.map  custom.scss
app/strategy/: strategy_1.py  strategy_2.py
app/tasks/: __init__.py  klines.py  notification.py  signal.py
app/tasks/strategy/: __init__.py  strategy_1.py  strategy_2.py
app/templates/: accounts.html
app/utils/: auth.py
