[tool.poetry]
name = "crypto-signal"
version = "0.1.0"
description = ""
authors = ["dewdroid <thossapoldew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
APScheduler = "^3.9.1"
redis = "^4.3.4"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pendulum = "^2.1.2"
numpy = "^1.23.3"
orjson = "^3.8.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
